service can be added

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -228,6 +228,13 @@
                                         <p>{% translate "User Profile" %}</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="{% url 'appointment:add_service' %}" class="nav-link">
+                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <i class="far fa-plus-square nav-icon"></i>
+                                        <p>{% translate "Add Service" %}</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
