--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -79,10 +79,13 @@
                 <a href="#">{% trans "Booking" %}</a>
                 <ul class="sub-menu">
                     {% if request.user.is_authenticated %}
-                        <li><a href="{% url 'homepage:services_offered' %}">{% trans "Services" %}</a></li>
+                        <li><a href="{% url 'homepage:services_offered' %}">{% trans "Book Me" %}</a></li>
+                        <li><a href="{% url 'homepage:promotions' %}">{% trans "Latest Promotions" %}</a></li>
+                        <li><a href="{% url 'client:book_me' %}">{% trans "OBM (deprecated)" %}</a></li>
+                    {% else %}
+                        <li><a href="{% url 'client:book_me' %}">{% trans "Book Me" %}</a></li>
+                        <li><a href="{% url 'homepage:promotions' %}">{% trans "Latest Promotions" %}</a></li>
                     {% endif %}
-                    <li><a href="{% url 'client:book_me' %}">{% trans "Book Me" %}</a></li>
-                    <li><a href="{% url 'homepage:promotions' %}">{% trans "Latest Promotions" %}</a></li>
                 </ul>
             </li>
 
@@ -91,7 +94,7 @@
                 <ul class="sub-menu">
                     <li><a href="{% url 'client:login' %}">{% trans "View Your Images" %}</a></li>
                     <li><a href="{% url 'client:register' %}">{% trans "Registration" %}</a></li>
-                    {% if not request.user.is_authenticated%}
+                    {% if not request.user.is_authenticated %}
                         <li><a href="{% url 'administration:login' %}">{% trans "Admin Login" %}</a></li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
